Some style updates

--- a/src/views/JobsEngDetail.pug
+++ b/src/views/JobsEngDetail.pug
@@ -3,12 +3,13 @@ html
         title Engineering Details
     style
         include JobsEngDetail.css
+    link(rel='stylesheet', href='https://unpkg.com/sakura.css/css/sakura.css')
     body
         h1 Engineering Details
 
         div(class="wrapper")
             table(class="table")
-                tr(class="row header blue")
+                tr(class="row header")
                     th(class="cell") Author
                     th(class="cell") "Build.sh" usages
                     th(class="cell") "Swagger.py" usages
