--- a/src/views/JobsEngDetail.css
+++ b/src/views/JobsEngDetail.css
@@ -1,20 +1,14 @@
 .wrapper {
     margin: 0 auto;
-    max-width: 800px;
+    max-width: 80rem;
     background: #2b2b2b;
 }
 
 .table {
-    margin: 0 0 40px 0;
+    margin: 0 0 2rem 0;
     width: 100%;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 .1em .3em rgba(0, 0, 0, 0.2);
     display: table;
-}
-
-@media screen and (max-width: 580px) {
-    .table {
-        display: block;
-    }
 }
 
 .row {
@@ -29,38 +23,15 @@
 .row.header {
     font-weight: 900;
     color: #ffffff;
-    background: #ea6153;
+    background: #2980b9;
 }
 
 .row.final {
     font-weight: 900;
-    /*color: #ffffff;*/
     background: rgb(138, 134, 138);
 }
 
-.row.green {
-    background: #27ae60;
-}
-
-.row.blue {
-    background: #2980b9;
-}
-
-@media screen and (max-width: 580px) {
-    .row {
-        padding: 8px 0;
-        display: block;
-    }
-}
-
 .cell {
-    padding: 6px 12px;
+    padding: .4em .8em;
     display: table-cell;
-}
-
-@media screen and (max-width: 580px) {
-    .cell {
-        padding: 2px 12px;
-        display: block;
-    }
 }
