Fixing title giudico deploy status

--- a/src/views/JobsEngGiudicoDeployStatus.pug
+++ b/src/views/JobsEngGiudicoDeployStatus.pug
@@ -1,6 +1,6 @@
 html
     head
-        title Engineering Details
+        title Giudico Status
     style
         include JobsEngGiudicoDeployStatus.css
     link(rel='stylesheet', href='https://unpkg.com/sakura.css/css/sakura.css')
