Removing odd color for table on giudico status

--- a/src/views/JobsEngGiudicoDeployStatus.css
+++ b/src/views/JobsEngGiudicoDeployStatus.css
@@ -16,9 +16,9 @@
     background: #f6f6f6;
 }
 
-.row:nth-of-type(odd) {
-    background: #bababa;
-}
+/*.row:nth-of-type(odd) {*/
+    /*background: #bababa;*/
+/*}*/
 
 .row.in-corso {
     background: #ECCB26;
