--- a/src/views/xmas-footer.pug
+++ b/src/views/xmas-footer.pug
@@ -1,7 +1,7 @@
 style
     include xmas-footer.css
 
-link(rel="stylesheet", type="text/css", href="http://fonts.googleapis.com/css?family=Mountains+of+Christmas")
+link(rel="stylesheet", type="text/css", href="https://fonts.googleapis.com/css?family=Mountains+of+Christmas")
 
 div(class="xmas-hills")
     div(class="xmas-wrapper")
