--- a/src/views/JobsEngGiudicoDeployStatus.css
+++ b/src/views/JobsEngGiudicoDeployStatus.css
@@ -2,21 +2,39 @@
     float: right;
 }
 
+.tablesorter-headerAsc {
+    background-repeat: no-repeat;
+    background-position: center right;
+    background-image: url(data:image/gif;base64,R0lGODlhFQAEAIAAACMtMP///yH5BAEAAAEALAAAAAAVAAQAAAINjB+gC+jP2ptn0WskLQA7);
+}
+
+.tablesorter-headerDesc {
+    background-repeat: no-repeat;
+    background-position: center right;
+    background-image: url(data:image/gif;base64,R0lGODlhFQAEAIAAACMtMP///yH5BAEAAAEALAAAAAAVAAQAAAINjI8Bya2wnINUMopZAQA7);
+}
+
+.tablesorter-headerUnsorted {
+    background-repeat: no-repeat;
+    background-position: center right;
+    background-image: url(data:image/gif;base64,R0lGODlhFQAJAIAAACMtMP///yH5BAEAAAEALAAAAAAVAAkAAAIXjI+AywnaYnhUMoqt3gZXPmVg94yJVQAAOw==);
+}
+
 .wrapper {
-    margin: 0 auto;
-    max-width: 80rem;
+margin: 0 auto;
+max-width: 80rem;
 }
 
 .table {
-    margin: 0 0 2rem 0;
-    width: 100%;
-    box-shadow: 0 .1em .3em rgba(0, 0, 0, 0.2);
-    display: table;
+margin: 0 0 2rem 0;
+width: 100%;
+box-shadow: 0 .1em .3em rgba(0, 0, 0, 0.2);
+display: table;
 }
 
 .row {
-    display: table-row;
-    background: #f6f6f6;
+display: table-row;
+background: #f6f6f6;
 }
 
 /*.row:nth-of-type(odd) {*/
